--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -8,10 +8,40 @@
     content="width=device-width, initial-scale=1.0"
   >
   <title>Anchors</title>
+  <link
+    rel="stylesheet"
+    href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
+  >
+
 </head>
 
 <body>
-
+  <a
+    href="https://google.com"
+    title="Click aici pentru a naviga spre Google"
+  >Google</a>
+  <br>
+  <a
+    href="https://ro.yahoo.com/?p=us"
+    target="_blank"
+    rel="noopener noreferrer"
+    title="Apasa pentru Yahoo!"
+  >Yahoo</a>
+  <br>
+  <a
+    href="https://www.bing.com/"
+    target="_blank"
+    rel="noopener noreferrer"
+    title="Navigheaza spre Bing"
+  >Bing</a>
+  <br>
+  <a
+    href="http://facebook.com"
+    target="_blank"
+    rel="noopener noreferrer"
+    title="Click aici pentru Facebook"
+    S
+  >Facebook</a>
   <div
     class="pixeltab-host"
     id="html01-01-03"
