--- a/Curs01/Ex01/index.html
+++ b/Curs01/Ex01/index.html
@@ -14,6 +14,13 @@
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
 </head>
+<h1>Acesta este un titlu.</h1>
+<h2>Acesta este un subtitlu.</h2>
+<h3>Acesta este un titlu mai mic.</h3>
+<h4>Aceasta este un titlu de nivel 4.
+  <h5>Aceasta este un titlu de nivel 5.</h5>
+  <h6>Acesta este un titlu de nivel 6.</h6>
+</h4>
 
 <body>
 
