--- a/Curs01/Ex01/index.html
+++ b/Curs01/Ex01/index.html
@@ -19,16 +19,16 @@
 <h3>Acesta este un titlu mai mic.</h3>
 <h4>Aceasta este un titlu de nivel 4.
   <h5>Aceasta este un titlu de nivel 5.</h5>
-  <h6>Acesta este un titlu de nivel 6.</h6>
-</h4>
+  <h6>Aceasta este un titlu de nivel 6.</h6>
 
-<body>
 
-  <div
-    class="pixeltab-host"
-    id="html01-01-01"
-  ></div>
-  <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
-</body>
+  <body>
+
+    <div
+      class="pixeltab-host"
+      id="html01-01-01"
+    ></div>
+    <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
+  </body>
 
 </html>
