--- a/Curs02/Ex01/index.html
+++ b/Curs02/Ex01/index.html
@@ -17,7 +17,26 @@
 
 <body>
 
-
+  <img
+    src="https:/via.placeholder.com/300x100/40"
+    alt="imaginea mea"
+  >
+  <img
+    src="https:/viap.placeholder.com/320x10/43"
+    alt="imaginea mea"
+  >
+  <img
+    src="https:/via.placeholder.com/256x100/800"
+    alt="imaginea mea"
+  >
+  <img
+    src="https:/via.placeholder.com/300x150/420"
+    alt="imaginea mea"
+  >
+  <img
+    src="https:/via.placeholder.com/500x600/270"
+    alt="imaginea mea"
+  >
   <div
     class="pixeltab-host"
     id="html01-02-01"
