--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -42,6 +42,20 @@
     title="Click aici pentru Facebook"
     S
   >Facebook</a>
+  <br>
+  <a
+    href="http://twitter.com"
+    target="_blank"
+    rel="noopener noreferrer"
+    title="Click pentru Twitter"
+  >Twitter</a>
+  <br>
+  <a
+    href="http://pixellab.ro"
+    target="_blank"
+    rel="noopener noreferrer"
+    title="Aici invatam HTML"
+  >Pixellab</a>
   <div
     class="pixeltab-host"
     id="html01-01-03"
