--- a/Curs02/Ex05/index.html
+++ b/Curs02/Ex05/index.html
@@ -16,7 +16,27 @@
 </head>
 
 <body>
-
+  <ol>
+    <li>JavaScript</li>
+    <li>Node.js</li>
+    <li>Bootstrap/Tailwind</li>
+    <li>React</li>
+    <li>HTML/CSS</li>
+  </ol>
+  <ol>
+    <li>mimi</li>
+    <li>lili</li>
+    <li>cici</li>
+    <li>bibi</li>
+    <li>gigi</li>
+  </ol>
+  <ol>
+    <li>nas</li>
+    <li>fas</li>
+    <li>bas</li>
+    <li>gas</li>
+    <li>ceas</li>
+  </ol>
 
   <div
     class="pixeltab-host"
