--- a/Curs03/Ex03/index.html
+++ b/Curs03/Ex03/index.html
@@ -17,6 +17,19 @@
 
 <body>
   <form>
+    <input
+      type="email"
+      name="email"
+      id="email"
+      placeholder="Email"
+      required
+    ><br>
+    <input
+      type="password"
+      name="password"
+      id="password"
+      required
+    ><br>
     <button type="submit">Trimite</button>
   </form>
 
