--- a/Curs03/Ex05/index.html
+++ b/Curs03/Ex05/index.html
@@ -18,7 +18,55 @@
 
 <body>
   <form>
+    <input
+      type="email"
+      name="email"
+      id="email"
+      placeholder="Email"
+      required
+    ><br>
+    <input
+      type="password"
+      name="password"
+      id="password"
+      required
+    >
+    <br>
+
+
+    <input
+      type="checkbox"
+      name="remember"
+      id="remember"
+      required
+    ><label for="remember">remember</label>
+    <br>
+
+
+    <input
+      type="password"
+      name="password"
+      required
+    >
+  </form>
+  <form>
     <button type="submit">Trimite</button>
+  </form>
+  <form>
+    <input
+      type="checkbox"
+      name="remember"
+      id="remember"
+      required
+    >
+
+  </form>
+  <form>
+    <input
+      type="password"
+      name="password"
+      required
+    >
   </form>
 
   <div
