--- a/Curs03/Ex06/index.html
+++ b/Curs03/Ex06/index.html
@@ -53,6 +53,69 @@
         </li>
       </ul>
     </form>
+    <form action="">
+      <H3>Pesti</H3>
+      <ul>
+        <li>
+          <input
+            type="radio"
+            name="pesti"
+            id="ton"
+            value="ton"
+            checked
+          >
+          <label for="ton">Ton</label>
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="pesti"
+            id="somon"
+            value="somon"
+          >
+          <label for="somon">Somon</label>
+
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="pesti"
+            id="pastrav"
+            value="pastrav"
+          >
+          <label for="pastrav">Pastrav</label>
+        </li>
+      </ul>
+    </form>
+    <form action="">
+      <h3>Mamifere</h3>
+      <ul>
+        <li>
+          <input
+            type="radio"
+            name="mamifere"
+            id="urs"
+            value="urs"
+          > <label for="urs">urs</label>
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="mamifere"
+            id="leu"
+            value="leu"
+          > <label for="leu">leu</label>
+        </li>
+        <li>
+          <input
+            type="radio"
+            name="mamifere"
+            id="lup"
+            value="lup"
+          > <label for="lup">lup</label>
+        </li>
+      </ul>
+    </form>
 
     <div
       class="pixeltab-host"
