--- a/Curs02/Ex02/index.html
+++ b/Curs02/Ex02/index.html
@@ -11,11 +11,26 @@
 </head>
 
 <body>
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
+  <img
+    src=""
+    alt="imaginea mea 1"
+  >
+  <img
+    src=""
+    alt="imaginea mea 2"
+  >
+  <img
+    src=""
+    alt="imaginea mea 3"
+  >
+  <img
+    src=""
+    alt="imaginea mea 4"
+  >
+  <img
+    src=""
+    alt="imaginea mea 4"
+  >
 
   <div
     class="pixeltab-host"
