--- a/Curs02/Ex04/index.html
+++ b/Curs02/Ex04/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>Liste neordonate</title>
 
   <link
     rel="stylesheet"
@@ -16,6 +16,46 @@
 </head>
 
 <body>
+
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Sass</li>
+    <li>npm</li>
+    <li>Bootstrap</li>
+  </ul>
+
+  <ul>
+    <li>Javascript</li>
+    <li>Node.js</li>
+    <li>Ajax</li>
+    <li>JQuery</li>
+    <li>DOM Scripting</li>
+    <li>React</li>
+  </ul>
+  <ul>
+    <li>fasole</li>
+    <li>rosii</li>
+    <li>bere</li>
+    <li>tigari</li>
+    <li>iar bere</li>
+    <li>mai multe tigari</li>
+  </ul>
+  <ul>
+    <li>ramona</li>
+    <li>roxana</li>
+    <li>rebecca</li>
+    <li>francesca</li>
+    <li>joiana</li>
+
+  </ul>
+  <ul>
+    <li>zambrotta</li>
+    <li>collina</li>
+    <li>dos santos</li>
+    <li>valbuena</li>
+    <li>maracana</li>
+  </ul>
   <div
     class="pixeltab-host"
     id="html01-02-04"
