--- a/Curs03/Ex04/index.html
+++ b/Curs03/Ex04/index.html
@@ -17,6 +17,87 @@
 </head>
 
 <body>
+  <form>
+    <h5>Kaufland</h5>
+    <ul>
+      <li>
+        <input
+          type="checkbox"
+          name="paine"
+          id="paine"
+        >
+        <label for="paine">Paine</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="lapte"
+          id="lapte"
+        >
+        <label for="lapte">Lapte</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="ciocolata"
+          id="ciocolata"
+        > <label for="ciocolata">Ciocolata</label>
+      </li>
+    </ul>
+  </form>
+
+
+  <form>
+    <h5>Mega</h5>
+    <ul>
+      <li>
+        <input
+          type="checkbox"
+          name="bere"
+          id="bere"
+        > <label for="bere">Bere</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="vodka"
+          id="vodka"
+        > <label for="vodka">vodka</label>
+      </li>
+      <li>
+        <input
+          type="checkbox"
+          name="tigari"
+          id="tigari"
+        > <label for="tigari">tigari</label>
+      </li>
+    </ul>
+
+
+  </form>
+  <form>
+    <h5>Nufarul</h5>
+    <ul>
+      <li><input
+          type="checkbox"
+          name="detergent"
+          id="detergent"
+        ><label for="detergent">Ariel</label></li>
+
+      <li><input
+          type="checkbox"
+          name="detartrant"
+          id="detartrant"
+        ><label for="detartrant">Derty</label>D</li>
+      <li>
+        <input
+          type="checkbox"
+          name="insecticid"
+          id="insecticid"
+        ><label for="insecticid">Raid</label>
+      </li>
+    </ul>
+  </form>
 
 
   <div
